Wrapper script to pass the args correctly
If the shell form of ENTRYPOINT is used in the dockerfile it loses the
arguments due to escaping. But we do need a shell for this to work so
now there's a wrapperscript that starts a shell and passes the args
correctly.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -52,7 +52,9 @@
         "args": [
             "-stdin",
             "-arrayOpts",
-            "mysqldump -uroot -psecure --all-databases,mariadb-b5b9dd4d6-scwvl,mariadb,myproject",
+            "mysqldump -uroot -psecure --all-databases,mariadb-b5b9dd4d6-lvl4d,mariadb,myproject",
+            "-arrayOpts",
+            "mongodump --archive -u root -p example,mongodb-cb7b8c89f-6h7k5,mongodb,myproject",
         ],
         "port": 2345,
         "host": "127.0.0.1",
