--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,30 +2,34 @@ image: docker:latest
 services:
   - docker:dind
 
-before_script:
-- docker info
-
 variables:
   REGISTRY: "registry.vshn.net"
   IMAGE_NAME: "vshn/wrestic"
+  IMAGE_NAME_DOCKER_HUB: "appuio/wrestic"
+
+before_script:
+- docker info
+- echo $CI_JOB_TOKEN | docker login -u gitlab-ci-token --password-stdin $REGISTRY
+- echo $DOCKER_HUB_PASSWORD | docker login -u $DOCKER_HUB_USER --password-stdin
 
 build:
   script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $REGISTRY
     - docker build -t ${REGISTRY}/${IMAGE_NAME} .
+    - docker tag ${REGISTRY}/${IMAGE_NAME} docker.io/${IMAGE_NAME_DOCKER_HUB}
     - docker push ${REGISTRY}/${IMAGE_NAME}
+    - docker push docker.io/${IMAGE_NAME_DOCKER_HUB}
   tags:
     - dockerbuild
   only:
-    - dev
+    - master
 
 build:tag:
   script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $REGISTRY
     - docker build -t ${REGISTRY}/${IMAGE_NAME}:${CI_COMMIT_TAG} .
+    - docker tag ${REGISTRY}/${IMAGE_NAME}:${CI_COMMIT_TAG} docker.io/${IMAGE_NAME_DOCKER_HUB}:${CI_COMMIT_TAG}
     - docker push ${REGISTRY}/${IMAGE_NAME}:${CI_COMMIT_TAG}
+    - docker push docker.io/${IMAGE_NAME_DOCKER_HUB}:${CI_COMMIT_TAG}
   only:
     - tags
   tags:
     - dockerbuild
-
