--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -148,6 +148,29 @@
             "RESTORE_SECRETACCESSKEY": "ip3cdrkXcHmH4S7if7erKPNoxDn27V0vrg6CHHem",
             "STATS_URL": "http://localhost:8091",
         }
+      },
+      {
+        "name": "Launch restic prune",
+        "type": "go",
+        "request": "launch",
+        "mode": "debug",
+        "program": "${workspaceFolder}/cmd/wrestic/main.go",
+        "port": 2345,
+        "host": "127.0.0.1",
+        "args": [
+            "-prune",
+        ],
+        "env": {
+            "RESTIC_REPOSITORY": "s3:http://localhost:9000/baas1",
+            "RESTIC_PASSWORD": "asdf",
+            "AWS_ACCESS_KEY_ID": "8U0UDNYPNUDTUS1LIAF3",
+            "AWS_SECRET_ACCESS_KEY": "ip3cdrkXcHmH4S7if7erKPNoxDn27V0vrg6CHHem",
+            "PROM_URL":"http://localhost:9091/",
+            "HOSTNAME":"test",
+            "BACKUP_DIR": "/Users/simonbeck/Desktop/data",
+            "STATS_URL": "http://localhost:8091",
+            "KEEP_LAST": "12",
+        }
       }
   ]
 }
