Fix racecondition causing hangs during backups
This commit fixes a racecondition that was causing hangs during backups
on a few clusters. Also added the `--race` flag to the automated
integration test, to detect if new race conditions are introduced in new
releases.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "go.testTimeout": "120s",
   "go.testFlags": [
     "-v",
+    "--race",
   ],
   "go.testEnvVars": {
     "RESTIC_REPOSITORY":"s3:http://localhost:9000/baas1",
