Fix race conditions for stdout/stdin handling
`cmd.Wait()` will wait until all stdin and stdout writes have finished. If
those are not `os.File` objects this means they have to be closed at the
correct time in order for `Wait()` to return correctly.

Also we now make sure that all the data from the k8s stream is now
written before we call `cmd.Wait()`.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,12 +16,12 @@
         "env": {
             "RESTIC_REPOSITORY": "s3:http://localhost:9000/baas1",
             "RESTIC_PASSWORD": "asdf",
-            "AWS_ACCESS_KEY_ID": "minioadmin",
-            "AWS_SECRET_ACCESS_KEY": "minioadmin",
-            // "PROM_URL":"http://localhost:9091/",
-            "HOSTNAME":"gaga",
-            "BACKUP_DIR": "/Users/kid/Scratch/wrestic/data",
-            "STATS_URL": "http://localhost:8091",
+            "AWS_ACCESS_KEY_ID": "8U0UDNYPNUDTUS1LIAF3",
+            "AWS_SECRET_ACCESS_KEY": "ip3cdrkXcHmH4S7if7erKPNoxDn27V0vrg6CHHem",
+            "PROM_URL":"http://localhost:9000/",
+            "HOSTNAME":"myproject",
+            "BACKUP_DIR": "/Volumes/VMs/baas/data",
+            "STATS_URL": "http://localhost:9000",
         }
       },
       {
