--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-  "go.testTags": "unit integration",
+  "go.testTags": "integration",
   "go.testTimeout": "120s",
   "go.testFlags": [
     "-v",
-    "--race",
+    // "--race",
   ],
   "go.testEnvVars": {
     "RESTIC_REPOSITORY":"s3:http://localhost:9000/baas1",
@@ -18,6 +18,6 @@
     "RESTORE_SECRETACCESSKEY":"ip3cdrkXcHmH4S7if7erKPNoxDn27V0vrg6CHHem",
     "RESTORE_S3ENDPOINT": "http://localhost:9000/restore",
     "RESTORE_DIR":"/tmp/restore",
-    "RESTIC_BINARY": "/Users/simonbeck/repos/restic/cmd/restic/restic"
+    "RESTIC_BINARY": "/usr/local/bin/restic"
   },
 }
