Build, publish and test nonroot image variant

--- a/.github/workflows/test-nonroot.yml
+++ b/.github/workflows/test-nonroot.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Test Nonroot
 on:
   pull_request:
     branches:
@@ -12,6 +12,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build image
-      run: docker build -t test .
+      run: docker build --target nonroot -t test .
     - name: Run image
       run: docker run --rm test --help
