--- a/.github/workflows/push-nonroot.yml
+++ b/.github/workflows/push-nonroot.yml
@@ -20,11 +20,10 @@ jobs:
     - name: Set version from tag
       if: startsWith(github.ref, 'refs/tags/v')
       run: echo VERSION="$(echo ${GITHUB_REF#refs/tags/})-nonroot" >> $GITHUB_ENV
-    - name: Build Image
-      run: docker build --target nonroot -t "${IMAGE}:${VERSION}" .
     - name: Push Image
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
         name: "${{ env.IMAGE }}:${{ env.VERSION }}"
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        buildoptions: --target nonroot
