Clone the whole git history with checkout@v2

--- a/.github/workflows/test-nonroot.yml
+++ b/.github/workflows/test-nonroot.yml
@@ -11,6 +11,8 @@ jobs:
       DOCKER_BUILDKIT: "1"
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Build image
       run: docker build --target nonroot -t test .
     - name: Run image
