--- a/.github/workflows/push-nonroot.yml
+++ b/.github/workflows/push-nonroot.yml
@@ -14,6 +14,8 @@ jobs:
       IMAGE: docker.io/${{ github.repository }}
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Set version latest
       if: github.ref == 'refs/heads/master'
       run: echo VERSION=latest-nonroot >> $GITHUB_ENV
