--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,3 +17,5 @@ jobs:
       run: docker build -t test .
     - name: Run image
       run: docker run --rm test --help
+    - name: Integration Test
+      run: make integration-test
